---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: ????
  Info:
    - Add the k2 pollution filter washing recipe
    - Align washbox icon vertically to the pump
    - Test the colored working visualizations
    - Setup the masks properly
    - Disable the alt mode recipe icon
    - Attempt to link some valves to the furnace
    - Put the furnace input fluidbox above the output one
    - Prepare wube debug build
    - Overcome the limitations
    - Detect the flow speed through lots of crafts
    - Hook up the furnace to only run with enough flow
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2025. 06. 17
  Info:
    - Initial commit