@@ -3,3 +3,6 @@ washbox=Washbox
 washbox--valve-in=Washbox's valve in
 washbox--valve-out=Washbox's valve out
 washbox--pumping-speed=Washbox's pumping speed
+
+[entity-description]
+washbox=Pumping speed must be at least 1000/s.
