@@ -13,6 +13,7 @@ Date: ????
     - Overcome the limitations
     - Detect the flow speed through lots of crafts
     - Hook up the furnace to only run with enough flow
+    - Finalize the compound entity
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.1
 Date: 2025. 06. 17
